I edited my navigation page so it would be aligned and fixed on every page. I also padded my first section so that the header and section would not clash.

--- a/styling/style1.css
+++ b/styling/style1.css
@@ -7,7 +7,7 @@ html {
 #header{
   font-family: 'Comic Sans MS', cursive, sans-serif;
   color: black;
-  text-align: left;
+  text-align: center;
   margin: auto;
 }
 
@@ -28,6 +28,30 @@ h1 {
   padding-left: 0.2em;
   padding-right: 0.8em;
   background-color: #BDF0FF; /*light blue */
+  list-style-type: none;
+  float: left;
+  width: 100%;
+  overflow: hidden;
+}
+
+#navigation ul{
+  position:fixed;
+  opacity: .9;
+  horizontal-align:;
+}
+#navigation li {
+    float: left;
+}
+
+#navigation li a {
+  display: block;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+}
+
+#navigation li a:hover {
+  background-color: blue;
 }
 
 body {
@@ -57,6 +81,11 @@ body.respg{
   margin:0;
 }
 
+section.first{
+  margin: auto;
+  padding-top: 6.666em; 
+}
+
 figure.imgs{
   width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);	
@@ -75,4 +104,6 @@ figcaption.pol{
 img {
   width: 100%;
   display: block;
+  text-align: center;
+  text-align: center;
 }
